# libtss

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  docker-compose.yml  keygen  sign
.devcontainer/: devcontainer.json  docker-compose.yaml
.github/workflows/: build-tsslib.yml  publish-native-module.yml
SDK/: build.rs
SDK/c-client/: README.md
SDK/c-client/src/: dkls23.c
SDK/go-client/: Makefile  go.mod
SDK/go-client/examples/: dkls23_example.go
SDK/rn-client/examples/RNApp/: package.json  pnpm-lock.yaml
SDK/rn-client/libtss/: LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
SDK/rn-client/libtss/example/: app.json  package.json  pnpm-lock.yaml
SDK/rn-client/libtss/example/src/: App.tsx
SDK/rn-client/libtss/src/: index.tsx
SDK/rn-client/rn-tss-module/: package.json
SDK/rn-client/rn-tss-module/android/src/main/java/com/zerox/rtntss/: TssModule.kt
SDK/rust-client/api/: Cargo.toml
SDK/rust-client/api/connections/: http_client.rs
SDK/rust-client/api/dkls23/: dkg.rs
SDK/rust-client/examples/: Cargo.toml  build.rs
SDK/rust-client/examples/api/: test_dkg.rs
SDK/rust-client/examples/utils/: mod.rs
SDK/src/dkls23/: sign_testdatagen.rs
client-examples/: Cargo.toml  Makefile  build.rs
client-examples/c-client/: Makefile
client-examples/c-client/src/: dkls23.c  dkls23.h  main.c
client-examples/c-client/src/utils/: files.h
client-examples/go-client/: Makefile  go.mod
client-examples/go-client/dkls23/: dkls23.go
client-examples/go-client/examples/: dkls23_example.go
client-examples/rn-client/RNApp/: App.tsx  package.json
client-examples/rn-client/rn-tss-module/: package.json
client-examples/rn-client/rn-tss-module/android/: build.gradle
client-examples/rn-client/rn-tss-module/android/src/main/java/com/zerox/rtntss/: TssModule.kt  TssPackage.kt
client-examples/rn-client/rn-tss-module/js/: NativeTss.ts
client-examples/src/: lib.rs
client-examples/src/client/: dkls23.h
client-examples/src/dkls23/: dkg_testdatagen.rs  mod.rs  sign_testdatagen.rs  test_dkg.rs  test_sign.rs
client-examples/src/utils/: files.rs  hash.rs
examples/dkls23/: keygen.c  keygen.h  mocks.h  tests.c  tests.h  utils.c  utils.h
ffi-tss-lib-tests/: Cargo.toml  Makefile  build.rs
ffi-tss-lib-tests/src/client/: dkls23.c  main.c
ffi-tss-lib-tests/src/client/utils/: files.c
ffi-tss-lib-tests/src/dkls23/: mod.rs  test_dkg.rs
mpc/: Cargo.toml
mpc/src/: lib.rs  mod.rs
mpc/src/DKLs/: keygen.rs  sign.rs
mpc_c/DKLs/: keygen.c  sign.c
rust-c-tss/: Cargo.toml
rust-c-tss/src/: lib.rs
rust-c-tss/src/dkls23/protocols/: dkg.rs
rust-c-tss/src/dkls23/utilities/: c_types.rs  convertions.rs  logs.rs  mod.rs
scripts/: activate  libtss-build  libtss-clean  libtss-docker-build  libtss-docker-clean  libtss-docker-go-example  libtss-docker-test  libtss-go-example  libtss-test
src/: lib.rs
src/dkls23/protocols/: derivation.rs  dkg.rs  mod.rs  re_key.rs  signing.rs
src/dkls23/utilities/: cjson.rs
src/utilities/: cjson.rs
