[package]
name = "ffi_tss"
version = "0.1.0"
edition = "2021"

[dependencies]
dkls23 = { git = "https://github.com/0xCarbon/DKLs23.git" }
k256 = { version = "0.13", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
deterministic = ["dkls23/insecure-rng"]

[lib]
crate-type = ["cdylib", "lib"]
