[package]
name = "ffi_tss_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
dkls23 = { git = "ssh://git@github.com/0xCarbon/DKLs23.git", branch = "feat/deterministic-rng-dkg" }
ffi_tss = { path = ".." }
hex = "0.4"
serde_json = "1.0"
sha2 = "0.10.8"
rand = "0.8"

[dev-dependencies]
dkls23 = { git = "ssh://git@github.com/0xCarbon/DKLs23.git", branch = "feat/deterministic-rng-dkg", features=["insecure-rng"] }

[build-dependencies]
cc = "1.0"
