[package]
name = "rust-c-tss"
version = "0.1.0"
edition = "2021"

[dependencies]
# dkls23 = { git = "ssh://git@github.com/0xCarbon/DKLs23.git" }
# just for the sake of testing, before merging the deterministic feature on
# main branch, we are using a local branch.
dkls23 = { path = "../../DKLs23" }
k256 = { version = "0.13", features = ["serde"] }

[dev-dependencies]
# to run deterministic tests, we must enable this feature flag
dkls23 = { path = "../../DKLs23", features=["insecure-rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[lib]
crate-type = ["cdylib"]
